--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -19,7 +19,7 @@
     "    3.3 [Objective 3 - Would the selected goods appeal more to males or females, or both equally?](#3.3-Objective-3---Would-the-selected-goods-appeal-more-to-males-or-females,-or-both-equally?)\n",
     "    \n",
     "    \n",
-    "4. [Evaluation](#4.-Evaluation)\n",
+    "4. [Evaluation & Link to Blog Post](#4.-Evaluation-&-Link-to-Blog-Post)\n",
     "\n",
     "5. [References](#5.-References)"
    ]
@@ -537,12 +537,12 @@
    "id": "6fa3fa78",
    "metadata": {},
    "source": [
-    "# 4. Evaluation\n",
+    "# 4. Evaluation & Link to Blog Post\n",
     "\n",
     "Based on the [Customer Shopping Data](https://www.kaggle.com/datasets/mehmettahiraslan/customer-shopping-dataset) (Aslan, 2023),\n",
     "the entrepreneur will do well to locate their shop in the Mall of Istanbul where they can should prioritize selling Clothing, Cosmetics and Food & Beverage to maximize profitability. Sustainability should be easier to achieve as long as they cater equally to both males and females. \n",
     "\n",
-    "A less technical analysis of this study can be found in my blog post linked [here](https://medium.com/@brian.meki/location-location-location-90e98232ad87)."
+    "A less technical analysis of this study can be found in my **blog post** linked [here](https://medium.com/@brian.meki/location-location-location-90e98232ad87)."
    ]
   },
   {
